DTSPB-44434 Refactored code